Fixes, improvements; it is possile to group sticked notes; align function fixed; re-names fliX and flipY;added zoom level 25%; Dropped labels in toolbox; Captions now hidden;

--- a/lightbox/static/css/app.less
+++ b/lightbox/static/css/app.less
@@ -1099,7 +1099,7 @@ html, body, img{
 .image_active label {
 	color: #fff;
 	font-size: 0.6em;
-	display: block;
+	display: none;
 }
 
 .image label {
@@ -1238,4 +1238,13 @@ html, body, img{
 .stickable_note_title{
 	height: 15px;
 	border-bottom:1px solid #444;
+}
+
+
+button, input {
+	border-radius: 2px;
+}
+
+.btn-xs {
+	font-size:11px;
 }
